--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -7,9 +7,9 @@ Type=simple
 User=__APP__
 Group=__APP__
 WorkingDirectory=__INSTALL_DIR__/
-ExecStart=__INSTALL_DIR__/script
-StandardOutput=append:/var/log/__APP__/__APP__.log
-StandardError=inherit
+Environment="NODE_ENV=production"
+Environment="__YNH_NODE_LOAD_PATH__"
+ExecStart=__YNH_NODE__ __INSTALL_DIR__/server/bin/prod.js
 
 # Sandboxing options to harden security
 # Depending on specificities of your service/app, you may need to tweak these
