--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -9,7 +9,7 @@ Group=__APP__
 WorkingDirectory=__INSTALL_DIR__/
 Environment="NODE_ENV=production"
 Environment="__YNH_NODE_LOAD_PATH__"
-ExecStart=__YNH_NODE__ __INSTALL_DIR__/server/bin/prod.js
+ExecStart=__YNH_NODE__ __INSTALL_DIR__/start-desktop.sh
 
 # Sandboxing options to harden security
 # Depending on specificities of your service/app, you may need to tweak these
